clusters/demo/gitops-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-dashboard-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: weave.ruby.caffeineforcode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ww-gitops
            port:
              number: 9001
